form validation & spacing fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -39,7 +39,7 @@
     }
 
     .infoBox {
-        padding: 20px 12px;
+        padding: 25px 12px;
         -webkit-border-radius: 26px;
         -moz-border-radius: 26px;
         -ms-border-radius: 26px;
@@ -53,19 +53,20 @@
     }
 
     .infoBox input {
-        font-size: 16px;
+        font-size: 18px;
         padding: 8px 18px;
-        margin-bottom: 8px;
+        margin-bottom: 10px;
     }
 
     .infoBox textarea {
-        font-size: 16px;
+        font-size: 18px;
         padding: 10px 18px;
+        min-height: 115px;
     }
 
     .infoBox button {
-        font-size: 18px;
-        margin-top: 8px;
+        font-size: 20px;
+        margin-top: 10px;
         padding: 8px 0;
     }
 
